using APDL.API.Domain.Shared;
using APDL.API.Domain.Storage.ValueObjects;

namespace APDL.API.Domain.Storage
{
    
    public class Yard : Facility
    {
        protected Yard() { }
        public Yard(Location location, TEUCapacity maxCapacityTEU)
            : base("Yard", location, maxCapacityTEU)
        {
        }
    }
}
